--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,13 +1,13 @@
-Smart 2.1 (2014-03-27)
+Smart4J 2.1 (2014-03-27)
 
 【特性】
 - 在 WebService 插件中支持 Ajax 跨域请求（可支持 JSONP 与 CORS 两种）【#20】
-- 提供 Smart SSO 模块，封装了 CAS 单点登录框架【#21】
+- 提供 Smart4J SSO 模块，封装了 CAS 单点登录框架【#21】
 - 使用父子 Maven 结构【#22】
 - 提供 changelog 文档【#44】
 - 新增 XML-RPC 插件【#48】
 - 可在 web.xml 中配置错误页面
-- 提供 Smart Security 模块，封装了 Shiro 权限控制框架
+- 提供 Smart4J Security 模块，封装了 Shiro 权限控制框架
 - 可配置应用首页（app.home_page），默认值为 /index.html
 
 【改进】
@@ -32,7 +32,7 @@ Smart 2.1 (2014-03-27)
 
 ----------------------------------------------------------------------------------------------------
 
-Smart 2.0 (2014-01-30)
+Smart4J 2.0 (2014-01-30)
 
 【特性】
 - 实现了文件上传与下载功能，支持多文件上传
